--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.scss
@@ -13,5 +13,18 @@
     }
     .font-11{
         font-size: 11px !important;
-    }
+	}
+	.profile-div {
+		width: 100px;
+		height: 100px;
+		border-radius: 15px;
+		background-color: #f2f3f7;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		img {
+			width: 40px;
+		}
+	}
 }
