--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -76,6 +76,7 @@ body {
 	font-weight: 500 !important;
 	display: flex;
 	align-items: center !important;
+	padding: 0 !important;
 
 	label {
 		font-weight: 500 !important;
