--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -9,13 +9,23 @@
             <form [formGroup]="leadForm">
                 <div class="kt-portlet__body">
 
+                    <div class="kt-portlet__body-progress">
+                        <mat-spinner [diameter]="20"></mat-spinner>
+                    </div>
 
+                    <!-- <kt-alert type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
+                    Oh snap! Change a few things up and try submitting again.
+                </kt-alert> -->
+
+
+
+                    <div class="form-group kt-form__group row">
                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
 
                             <!-- Name -->
                             <div class="row kt-padding-t-15">
                                 <div class="col-4 form-label">
-                                    <mat-label>Full Name</mat-label>
+                                    <mat-label class="mandatory" >Full Name</mat-label>
                                 </div>
 
                                 <div class="col-4">
@@ -45,7 +55,7 @@
                             <div class="row kt-padding-t-15">
                                 <!-- Mobile -->
                                 <div class="col-4 form-label">
-                                    <mat-label>Mobile Number</mat-label>
+                                    <mat-label class="mandatory">Mobile Number</mat-label>
                                 </div>
 
                                 <div class="col-5">
@@ -159,12 +169,12 @@
                             <!-- State -->
                             <div class="row kt-padding-t-15">
                                 <div class="col-4 form-label">
-                                    <mat-label>State</mat-label>
+                                    <mat-label class="mandatory">State</mat-label>
                                 </div>
 
                                 <div class="col-8">
                                     <!-- <mat-form-field appearance="outline" class="w-100"> -->
-                                    <!-- <mat-label>State</mat-label> -->
+                                    <!-- <mat-label class="mandatory">State</mat-label> -->
                                     <select class="form-control" formControlName="stateId" (change)="getCities()" margin
                                         [class.isError]="controls.stateId.touched && controls.stateId.invalid">
                                         <option disabled selected value=""> Select State</option>
@@ -184,7 +194,7 @@
                             <!-- City -->
                             <div class="row kt-padding-t-15">
                                 <div class="col-4 form-label">
-                                    <mat-label>City</mat-label>
+                                    <mat-label class="mandatory">City</mat-label>
                                 </div>
 
                                 <div class="col-8">
@@ -205,7 +215,7 @@
                             <!-- Date & Time -->
                             <div class="row kt-padding-t-15">
                                 <div class="col-4 form-label">
-                                    <mat-label>Date & Time</mat-label>
+                                    <mat-label class="mandatory">Date & Time</mat-label>
                                 </div>
 
                                 <div class="col-8">
@@ -221,12 +231,12 @@
                             <!-- Status -->
                             <div class="row kt-padding-t-15">
                                 <div class="col-4 form-label">
-                                    <mat-label>Select Status</mat-label>
+                                    <mat-label class="mandatory">Select Status</mat-label>
                                 </div>
 
                                 <div class="col-8">
                                     <!-- <mat-form-field appearance="outline" class="w-100"> -->
-                                    <!-- <mat-label>Select</mat-label> -->
+                                    <!-- <mat-label class="mandatory">Select</mat-label> -->
                                     <select class="form-control" formControlName="statusId" margin
                                         [class.isError]="controls.statusId.touched && controls.statusId.invalid">
                                         <option selected disabled value="">Select Status</option>
@@ -243,7 +253,7 @@
                             <!-- <div class="row">
                                 <div class="col">
                                     <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>State</mat-label>
+                                        <mat-label class="mandatory">State</mat-label>
                                         <mat-select formControlName="stateId" (selectionChange)="getCities($event)">
                                             <mat-option *ngFor="let state of states" [value]="state.id">
                                                 {{state.name}}
@@ -256,7 +266,7 @@
 
                                 <div class="col">
                                     <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>City</mat-label>
+                                        <mat-label class="mandatory">City</mat-label>
                                         <mat-select formControlName="cityId">
                                             <mat-option *ngFor="let city of cities" [value]="city.id">
                                                 {{city.name}}
@@ -270,7 +280,7 @@
 
 
                         </div>
-                    
+                    </div>
                 </div>
 
                 <!-- <div class="kt-form__actions kt-form__actions--solid">
