--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.scss
@@ -24,8 +24,9 @@
         top        : 20px;
         right      : 30px;
         font-weight: 500;
-        font-size  : 16px;
+        font-size  : 14px;
          z-index: 100 !important; 
+         letter-spacing: 1.1px;
     }
 
     .bg {
