--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -2,8 +2,7 @@
 
 <kt-portlet>
     <kt-portlet-body style="min-height: 79vh;">
-        <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
-        <div class="row kt-margin-t-10">
+        <div class="row kt-padding-t-20 kt-margin-b-40">
             <div class="col-3 font-weight-bold text-color d-flex align-items-center" placeholder="">Upload Gold Rate
             </div>
             <div class="col-3 per-gram">
@@ -12,6 +11,14 @@
                 <mat-error *ngIf="goldRate.invalid && goldRate.touched">Field required</mat-error>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12">
+                <label class="font-weight-bold text-color d-flex align-items-center">Upload Offer Banners</label>
+                <label  class="font-weight-500 text-gray d-flex align-items-center"> 600px X 300px with .jpg or .png</label>
+            </div>
+        </div>
+        <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
+        
     </kt-portlet-body>
     <kt-portlet-footer>
         <div class="row p-3">
