--- a/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
+++ b/gold-admin-frontend/src/app/views/partials/components/image-preview-dialog/image-preview-dialog.html
@@ -1,9 +1,7 @@
 
-  <!-- <div class="w-100 m-auto d-block">
-    
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-8"> -->
+ 
+  <div class="row kt-padding-l-40 kt-padding-r-40">
+    <div class="col-12"> 
       <ngb-carousel *ngIf="images">
         <ng-template ngbSlide *ngFor="let img of images">
           <div class="picsum-img-wrapper">
@@ -11,5 +9,5 @@
           </div>
         </ng-template>
       </ngb-carousel>
-    <!-- </div>
-  </div> -->
+    </div>
+  </div>
