--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
@@ -14,12 +14,12 @@
                 </ng-container>
 
                 <ng-container matColumnDef="mobile">
-                    <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Mobile No.</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.mobileNumber}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="pan">
-                    <mat-header-cell *matHeaderCellDef>PAN Number</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>PAN</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.panCardNumber | uppercase}}</mat-cell>
                 </ng-container>
 
