--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -18,8 +18,6 @@
                 </kt-alert> -->
 
 
-
-                    <div class="form-group kt-form__group row">
                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
 
                             <!-- Name -->
@@ -215,7 +213,7 @@
                             <!-- Date & Time -->
                             <div class="row kt-padding-t-15">
                                 <div class="col-4 form-label">
-                                    <mat-label class="mandatory">Date & Time</mat-label>
+                                    <mat-label>Date & Time</mat-label>
                                 </div>
 
                                 <div class="col-8">
@@ -281,7 +279,6 @@
 
                         </div>
                     </div>
-                </div>
 
                 <!-- <div class="kt-form__actions kt-form__actions--solid">
                         <div class="row text-right">
