bhushan: pan verifcation in kyc

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
@@ -129,7 +129,7 @@
 							<label class="text-color font-weight-500">Pan Number</label>
 						</div>
 
-						<div class="col-8">
+						<div class="col">
 							<!-- <mat-form-field appearance="outline" class="w-100"> -->
 							<input class="form-control" formControlName="panCardNumber" autocomplete="off"
 								placeholder="PAN Number" [class.isError]="
@@ -151,7 +151,7 @@
 							<!-- </mat-form-field> -->
 						</div>
 
-						<!-- <div class="col">
+						<div *ngIf="showVerifyPAN" class="col">
 							<div *ngIf="!isPanVerified">
 								<kt-button [myClass]="'w-100'" [isDisabled]="panButton" [type]="'button'"
 									[value]="'Verify'" (action)="verifyPAN()">
@@ -163,7 +163,7 @@
 									Verified
 								</button>
 							</div>
-						</div> -->
+						</div>
 					</div>
 
 					<div class="row kt-padding-t-15">
