--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -292,10 +292,10 @@
                                             <label class="mandatory  font-weight-500 text-color">Pin Code</label>
                                         </div>
                                         <div class="col-7">
-                                            <input formControlName="pinCode" type="number" aria-label="Pin Code"
+                                            <input formControlName="pinCode" type="text" aria-label="Pin Code"
                                                 placeholder="000000" class="form-control"
                                                 [class.isError]="addressForm.controls.pinCode.touched && addressForm.controls.pinCode.invalid"
-                                                onKeyPress="if(this.value.length==6) return false;">
+                                                numbersOnly maxlength="6">
                                             <mat-error
                                                 *ngIf="addressForm.controls.pinCode.errors?.required && addressForm.controls.pinCode.touched">
                                                 Required field
