--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.scss
@@ -1,6 +1,9 @@
 :host{
+    kt-portlet-body {
+		height: 69vh;
+		overflow-y: auto;
+	}
     .min-60{
-        min-height: 69vh !important;
-        overflow-y: auto;
+        min-height: 60vh !important;
     }
 }
