--- a/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
@@ -1,11 +1,17 @@
-<label class="text-color font-weight-bold h-v-text-center" *ngIf="schemes.length==0">No Schemes
-    Available</label>
+<div class="">
+    <label class="text-color font-weight-bold h-v-text-center min-vh-100" *ngIf="noResults.length==0">No Schemes
+        Available</label>   
+</div>
 
-<kt-portlet *ngIf="schemes.length>0">
+
+<kt-portlet *ngIf="noResults.length>0">
     <kt-portlet-body>
         <mat-tab-group #matTab>
             <mat-tab [label]='scheme.name' *ngFor="let scheme of schemes" >
+                <label class="text-color font-weight-bold h-v-text-center min-vh-60 m-0" *ngIf="scheme.schemes.length==0">No Schemes
+                    Available</label>
                 <div class="row kt-padding-10" *ngFor="let schemeDeatils of scheme.schemes">
+                    
                     <div class="col-2 from-style">
                         <span class="text-gray">From</span>
                         <h3>{{schemeDeatils.schemeAmountStart | slice:0:-5}}L to
