--- a/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.scss
@@ -1,4 +1,8 @@
 :host {
+    .min-vh-60{
+        min-height: 60vh;
+        overflow: hidden;
+    }
     .heading {
         font-weight: 600;
         font-size  : 15px;
