--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -20,7 +20,7 @@
 	</div>
 </div>
 
-<div class="gold-rate text-center">
+<div class="gold-rate">
 	<span class="kt-aside__gold-rate">Gold rate: </span>{{goldRate}} /gm
 </div>
 <!-- end:: Brand -->
